[BUGFIX] Ajout de MONGO_URL

--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -31,9 +31,12 @@ jobs:
           node-version: 20
 
       - name: Install dependencies
+        working-directory: dailyquest-backend
         run: npm ci
-        working-directory: ./
 
       - name: Run tests
+        working-directory: dailyquest-backend
+        env:
+          MONGO_URI: mongodb://localhost:27017/testdb
+          NODE_ENV: test
         run: npm test
-        working-directory: ./
