[BUGFIX] Ajout du NODE_ENV dans workflow et suppression dans package.json

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "cross-env NODE_ENV=test jest --runInBand --coverage"
+    "test": "jest --runInBand --coverage"
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
