--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -34,6 +34,7 @@ jobs:
         run: npm ci
 
       - name: Run tests
-        run: npm test
         env:
+          MONGO_URI: mongodb://localhost:27017/testdb
           NODE_ENV: test
+        run: npm test
