--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -29,13 +29,13 @@ jobs:
 
       - name: Wait for MongoDB
         run: |
-          until mongosh --host mongo --eval "db.adminCommand('ping')" >/dev/null 2>&1; do
+          until nc -z mongo 27017; do
             echo "Waiting for MongoDB..."
             sleep 2
           done
 
       - name: Run tests
         env:
-          MONGO_URI: mongodb://mongo:5000/testdb
+          MONGO_URI: mongodb://mongo:27017/testdb
           NODE_ENV: test
         run: npm test
