--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -12,30 +12,29 @@ jobs:
 
     services:
       mongo:
-        image: mongo:6.0
+        image: mongo:latest
         ports:
           - 27017:27017
         options: >-
-          --quiet
+          --health-cmd "mongosh --eval 'db.runCommand({ ping: 1 })'"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=5
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-      - uses: actions/setup-node@v4
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
         with:
           node-version: 20
 
-      - run: npm ci
-
-      - name: Wait for MongoDB
-        run: |
-          until nc -z mongo 27017; do
-            echo "Waiting for MongoDB..."
-            sleep 2
-          done
+      - name: Install dependencies
+        run: npm ci
 
       - name: Run tests
         env:
-          MONGO_URI: mongodb://mongo:27017/testdb
+          MONGO_URI: mongodb://localhost:27017/testdb
           NODE_ENV: test
         run: npm test
